<resources>
    <string name="app_name">PhysioFashion</string>
    <string name="title">Thermal Voice Wear</string>

    <string name="empty" />
    <string name="zero">0</string>
    <string name="number">%1$d</string>
    <string name="trial_counter">%1$d/%2$d</string>

    <string name="change_temp">I feel it</string>
    <string name="next">Next</string>
    <string name="participant_id">Participant ID</string>
    <string name="condition">Condition</string>
    <string name="fabric">Fabric</string>

    <string name="temperature_feel">What temperature did you feel?</string>
    <string name="hot">hot</string>
    <string name="cold">cold</string>

    <string name="how_comfortable">How comfortable was it?</string>
    <string name="very_comfortable">very comfortable</string>
    <string name="not_comfortable">very uncomfortable</string>

    <string name="wait_adaption">Please wait during the adaptation period&#8230;</string>
    <string name="wait_stimulus">Press the button once you feel the stimulus&#8230;</string>
    <string name="wait_temperature">Please wait until the target temperature is reached&#8230;</string>
    <string name="playing_audio">Playing audio&#8230;</string>
    <string name="pressed_stimulus">Wait for the timer to elapse&#8230;</string>

    <string name="return_to_start">Return to start</string>
    <string name="thanks">Thank you for participating!</string>
    <string name="continue_experiment">Continue</string>
    <string name="pause_countdown">Take a break while the timer is counting down</string>
    <string name="pause">Change external condition. Hit the button below once you are ready to continue</string>

    <string name="rate_arousal">How would you rate the arousal that you felt?</string>
    <string name="rate_valence">How would you rate the valence of what you felt?</string>
</resources>
